--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "semantic-ui-css": "^2.4.1"
   }
 }
